--- a/index.html
+++ b/index.html
@@ -9,21 +9,16 @@
 </head>
 <body>
 
-        <div class="player-container">
-            <audio id="audio-player" controls>
-                <source src="asset/uirec-20240609_032127.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
-            </audio>
-            <div class="controls">
-                <button id="play-btn">Play</button>
-                <button id="pause-btn">Pause</button>
-                <button id="stop-btn">Stop</button>
-            </div>
+    <div class="main h-screen w-full bg-black text-black items-center bg-gradient-to-r from-lime-400 to-lime-500 flex justify-center">
+        <div class="artist-card bg-white h-[60vh] w-[40vh] flex flex-col items-center rounded-lg box-shadow  shadow-xl">
+            <h1 class="font-bold bg-gradient-to-r from-rose-400 to-red-500 bg-clip-text text-transparent text-[30px] pt-5">Music Player</h1>
+            <img class="h-[20vh] w-[20vh] mt-3 rounded-xl" src="asset/img1.jpg" alt="">
         </div>
-    
-        <script src="script.js"></script>
-    
 
+
+
+
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
